# Lanskern

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  grub.cfg  link.ld
drivers/: disk.c  keyboard.c  vga.c
include/: disk.h  interrupt.h  kernel.h  keyboard.h  libstd.h  scheduler.h  tinyasm.h  vga.h
kernel/: boot.asm  interrupt.c  kernel.c
lib/: libstd.c
manuos/: manuos.c  manuos.h
